--- a/ipynb/Distributed Systems and Errors/1 REST.ipynb
+++ b/ipynb/Distributed Systems and Errors/1 REST.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "source": "# REST Style",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "51b63650c4b445c88f50b229cc9bd14e",
     "tags": [],
     "is_collapsed": false,
@@ -24,6 +25,7 @@
    "cell_type": "markdown",
    "source": "## Process / Scenario",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "159b9c46a213409e920579c3410e114e",
     "tags": [],
     "is_collapsed": false,
@@ -37,13 +39,14 @@
     "cell_id": "10d4d4a30d2d4bdcbc43ac7b87ee4910",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 807.0999755859375
+    "deepnote_cell_height": 666.2833251953125
    }
   },
   {
    "cell_type": "markdown",
    "source": "## Message Model",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "ef69aba0f57240e0afe9224a2ba62b54",
     "tags": [],
     "is_collapsed": false,
@@ -70,8 +73,9 @@
     "execution_millis": 168,
     "cell_id": "00003-e7a517cd-8f91-4a18-a19a-776ccc7d4168",
     "output_cleared": true,
+    "owner_user_id": "b81d8aca-38ab-4463-9146-b4459821842a",
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 261
+    "deepnote_cell_height": 256
    },
    "source": "from typing import Optional\nfrom pydantic import BaseModel\n\n\nclass Message(BaseModel):\n    businessKey: str\n    tenant: str\n    command: Optional[str] = None\n    event: Optional[str] = None\n    payload: Optional[str] = None\n",
    "execution_count": null,
@@ -81,6 +85,7 @@
    "cell_type": "markdown",
    "source": "## Order Fulfillment API(s)",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "b63d1855c86f45c3b31af5426ca52afd",
     "tags": [],
     "is_collapsed": false,
@@ -94,7 +99,7 @@
     "cell_id": "22832b81f50a4c8385c5c0ee0ee55662",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 52.399993896484375
+    "deepnote_cell_height": 74.80000305175781
    }
   },
   {
@@ -108,7 +113,7 @@
     "execution_millis": 411921,
     "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1188.800048828125
+    "deepnote_cell_height": 688
    },
    "source": "from fastapi import FastAPI\n\nimport nest_asyncio\nimport uvicorn\n\napp = FastAPI()\n\n# Payment microservice API definition\n@app.put(\"/retrieve_payment/\")\nasync def retrieve_payment(message: Message):\n    message.event = \"Payment_Done\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\n# Inventory microservice API definition\n@app.put(\"/fetch_goods/\")\nasync def fetch_goods(message: Message):\n    message.event = \"Goods_Fetched\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\n# Shipping microservice API definition\n@app.put(\"/ship_goods/\")\nasync def ship_goods(message: Message):\n    message.event = \"Goods_Shipped\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\n# Run API server\nnest_asyncio.apply()\nuvicorn.run(app, host=\"0.0.0.0\", port=8080)\n",
    "execution_count": null,
