--- a/ipynb/Distributed Systems and Errors/2 Message.ipynb
+++ b/ipynb/Distributed Systems and Errors/2 Message.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "source": "# Message Style",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "f0cab73640b44804b99190032d594738",
     "tags": [],
     "is_collapsed": false,
@@ -24,6 +25,7 @@
    "cell_type": "markdown",
    "source": "## Process / Scenario",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "930f695816d041d4a8ac8ccb9cc20a90",
     "tags": [],
     "is_collapsed": false,
@@ -37,7 +39,7 @@
     "cell_id": "f72357a3cc384bb68ec0e8d20b514de8",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 830.183349609375
+    "deepnote_cell_height": 652.36669921875
    }
   },
   {
@@ -116,6 +118,7 @@
    "cell_type": "markdown",
    "source": "## Message Model",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "b03ec11109e3491ca846cd8b13b0521d",
     "tags": [],
     "is_collapsed": false,
@@ -129,7 +132,7 @@
     "cell_id": "e29e2c525ba7439e8d54761f94652924",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 52.399993896484375
+    "deepnote_cell_height": 74.80000305175781
    }
   },
   {
@@ -143,7 +146,7 @@
     "cell_id": "00004-f463a11a-5f2d-4054-931f-e6284f90df2f",
     "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 405
+    "deepnote_cell_height": 400
    },
    "source": "from typing import Optional\nfrom pydantic import BaseModel\nimport uuid\n\n\nclass Message(BaseModel):\n    businessKey: str\n    tenant: str\n    command: Optional[str] = None\n    event: Optional[str] = None\n    payload: Optional[str] = None\n\n\nmessage = Message(\n    **{\n        \"businessKey\": str(uuid.uuid1()),\n        \"tenant\": tenant\n    }\n)",
    "execution_count": null,
@@ -153,6 +156,7 @@
    "cell_type": "markdown",
    "source": "## Message Queues",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "9c95ad73422647e6ae4b8ff35a4d88d7",
     "tags": [],
     "is_collapsed": false,
@@ -166,7 +170,7 @@
     "cell_id": "05f1a348bf6a43b2bf54064f07cfdfd6",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 52.399993896484375
+    "deepnote_cell_height": 74.80000305175781
    }
   },
   {
@@ -180,7 +184,7 @@
     "cell_id": "00005-fff109ad-9258-4c94-ae61-72ae9851b506",
     "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 333
+    "deepnote_cell_height": 328
    },
    "source": "import pika\n\nparams = pika.URLParameters(amqp_url)\n# Connect to RabbitMQ\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n# Declare order queue\nchannel.queue_declare(queue=\"order\")\n# Declare payment queue\nchannel.queue_declare(queue=\"payment\")\n# Declare inventory queue\nchannel.queue_declare(queue=\"inventory\")\n\nconnection.close()\n",
    "execution_count": null,
@@ -190,6 +194,7 @@
    "cell_type": "markdown",
    "source": "## Initial Event",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "0218d7df573347928461d4d09869395d",
     "tags": [],
     "is_collapsed": false,
@@ -217,7 +222,7 @@
     "output_cleared": true,
     "cell_id": "00006-223d52fb-9d13-4ad2-99d0-8bcfeacd038f",
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 297
+    "deepnote_cell_height": 292
    },
    "source": "import pika, pickle\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Define and publish (send) the Order_Placed event\nmessage.event = \"Order_Placed\"\nchannel.basic_publish(exchange=\"\", routing_key=\"order\", body=pickle.dumps(message))\nprint(\"Order_Placed message sent.\")\n\nconnection.close()\n",
    "execution_count": null,
@@ -227,6 +232,7 @@
    "cell_type": "markdown",
    "source": "## Message Subscription of Microservices",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "63573f06d43a4254a27f5583d30724db",
     "tags": [],
     "is_collapsed": false,
@@ -240,7 +246,7 @@
     "cell_id": "fbac90c300404541a9ff17472cd8596f",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 52.399993896484375
+    "deepnote_cell_height": 74.80000305175781
    }
   },
   {
@@ -254,7 +260,7 @@
     "output_cleared": true,
     "cell_id": "00007-855690d6-72cd-4728-86d0-bda14b42ab95",
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1071
+    "deepnote_cell_height": 1066
    },
    "source": "import pika, pickle, signal\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Payment microservice callback function\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange=\"\", routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Inventory microservice callback function\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange=\"\", routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Shipment microservice callback function\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange=\"\", routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Subscriptions on queues\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\ndef close_handler(signal, frame):\n    connection.close()\n\n\n# Run consuming server\ntry:\n    signal.signal(signal.SIGINT, close_handler)\n    channel.start_consuming()\nexcept Exception as e:\n    print(e)\n",
    "execution_count": null,
