--- a/ipynb/Distributed Systems and Errors/3 Message Tracking.ipynb
+++ b/ipynb/Distributed Systems and Errors/3 Message Tracking.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "source": "# Messaging with Tracking",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "f29f3ba1141d4605958743132af70fbd",
     "tags": [],
     "is_collapsed": false,
@@ -24,6 +25,7 @@
    "cell_type": "markdown",
    "source": "## Process / Scenario",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "a1966427d49144b4bfce2db5aec37338",
     "tags": [],
     "is_collapsed": false,
@@ -37,7 +39,7 @@
     "cell_id": "e1f2748a2de448d18191ae3c71ea0006",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 830.183349609375
+    "deepnote_cell_height": 629.9666748046875
    }
   },
   {
@@ -54,7 +56,7 @@
     "deepnote_cell_type": "input-text"
    },
    "source": "amqp_url = ''",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -81,7 +83,7 @@
     "deepnote_cell_type": "input-text"
    },
    "source": "tenant = 'showcase'",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -117,8 +119,7 @@
    "metadata": {
     "cell_id": "a1cdc3e6314a489b999f087b6fc1e45e",
     "tags": [],
-    "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 94.80000305175781
+    "deepnote_cell_type": "markdown"
    }
   },
   {
@@ -132,8 +133,7 @@
     "execution_millis": 265492,
     "is_code_hidden": true,
     "output_cleared": true,
-    "deepnote_cell_type": "code",
-    "deepnote_cell_height": 74.80000305175781
+    "deepnote_cell_type": "code"
    },
    "source": "if not amqp_url:\n    import os\n    amqp_url = os.environ.get('AMQP_URL')",
    "execution_count": null,
@@ -143,6 +143,7 @@
    "cell_type": "markdown",
    "source": "## Message Model",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "3378a9482fb1484998c5f2f81d16d407",
     "tags": [],
     "is_collapsed": false,
@@ -155,8 +156,7 @@
    "metadata": {
     "cell_id": "c5bf8e6e3dd242b99c0e5d6f2cbd42c9",
     "tags": [],
-    "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 52.399993896484375
+    "deepnote_cell_type": "markdown"
    }
   },
   {
@@ -169,8 +169,7 @@
     "execution_start": 1649151645844,
     "execution_millis": 38,
     "output_cleared": true,
-    "deepnote_cell_type": "code",
-    "deepnote_cell_height": 405
+    "deepnote_cell_type": "code"
    },
    "source": "from typing import Optional\nfrom pydantic import BaseModel\nimport uuid\n\n\nclass Message(BaseModel):\n    businessKey: str\n    tenant: str\n    command: Optional[str] = None\n    event: Optional[str] = None\n    payload: Optional[str] = None\n\n\nmessage = Message(\n    **{\n        \"businessKey\": str(uuid.uuid1()),\n        \"tenant\": tenant\n    }\n)",
    "execution_count": null,
@@ -180,6 +179,7 @@
    "cell_type": "markdown",
    "source": "## Message Queues and Routing",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "6d0f507330da4423922479aa7d0db8e9",
     "tags": [],
     "is_collapsed": false,
@@ -192,8 +192,7 @@
    "metadata": {
     "cell_id": "337e4f773e034985b20b6049f1a8b151",
     "tags": [],
-    "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 74.80000305175781
+    "deepnote_cell_type": "markdown"
    }
   },
   {
@@ -206,8 +205,7 @@
     "execution_start": 1649151645887,
     "execution_millis": 1833,
     "output_cleared": true,
-    "deepnote_cell_type": "code",
-    "deepnote_cell_height": 549
+    "deepnote_cell_type": "code"
    },
    "source": "import pika\n\nparams = pika.URLParameters(amqp_url)\n# Connect to RabbitMQ\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n# Declare order queue\nchannel.queue_declare(queue=\"order\")\n# Declare payment queue\nchannel.queue_declare(queue=\"payment\")\n# Declare inventory queue\nchannel.queue_declare(queue=\"inventory\")\n# Declare order fulfillment queue\nchannel.queue_declare(queue=\"order_fulfillment\")\n\n# Declare message routings\nchannel.exchange_declare(exchange=tenant)\nchannel.queue_bind(exchange=tenant, queue=\"order\", routing_key=\"order\")\nchannel.queue_bind(exchange=tenant, queue=\"payment\", routing_key=\"payment\")\nchannel.queue_bind(exchange=tenant, queue=\"inventory\", routing_key=\"inventory\")\nchannel.queue_bind(exchange=tenant, queue=\"order_fulfillment\", routing_key=\"order\")\nchannel.queue_bind(exchange=tenant, queue=\"order_fulfillment\", routing_key=\"payment\")\nchannel.queue_bind(exchange=tenant, queue=\"order_fulfillment\", routing_key=\"inventory\")\nchannel.queue_bind(exchange=tenant, queue=\"order_fulfillment\", routing_key=\"shipment\")\n\nconnection.close()\n",
    "execution_count": null,
@@ -217,6 +215,7 @@
    "cell_type": "markdown",
    "source": "## Initial Event",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "29ebe4be39e840e1aa090a78e40ea615",
     "tags": [],
     "is_collapsed": false,
@@ -229,8 +228,7 @@
    "metadata": {
     "cell_id": "b04fa7e41e56457084d419c266505586",
     "tags": [],
-    "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 52.399993896484375
+    "deepnote_cell_type": "markdown"
    }
   },
   {
@@ -243,8 +241,7 @@
     "execution_start": 1649151647735,
     "execution_millis": 776,
     "output_cleared": true,
-    "deepnote_cell_type": "code",
-    "deepnote_cell_height": 328.20001220703125
+    "deepnote_cell_type": "code"
    },
    "source": "import pika, pickle\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Define and publish (send) the Order_Placed event\nmessage.event = \"Order_Placed\"\nchannel.basic_publish(exchange=tenant, routing_key=\"order\", body=pickle.dumps(message))\nprint(\"Order_Placed message sent.\")\n\nconnection.close()\n",
    "execution_count": null,
@@ -254,6 +251,7 @@
    "cell_type": "markdown",
    "source": "## Message Subscription of Microservices and Tracker",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "fc6cda64afcd4630b94e3463352214a9",
     "tags": [],
     "is_collapsed": false,
@@ -266,8 +264,7 @@
    "metadata": {
     "cell_id": "bf9c5cef93464df7b7a7bf19355ef468",
     "tags": [],
-    "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 74.80000305175781
+    "deepnote_cell_type": "markdown"
    }
   },
   {
@@ -280,8 +277,7 @@
     "execution_start": 1649151648508,
     "execution_millis": 78352,
     "output_cleared": true,
-    "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1521.5999755859375
+    "deepnote_cell_type": "code"
    },
    "source": "import pika, pickle, requests, signal\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Order fulfillment tracking microservice callback function\ndef order_fulfillment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    request_data = {\n        \"messageName\": message.event,\n        \"businessKey\": message.businessKey,\n        \"tenantId\": message.tenant,\n    }\n    response = requests.post(camunda_eninge_rest + \"/message\", json=request_data)\n    return\n\n\n# Payment microservice callback function\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Inventory microservice callback function\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Shipment microservice callback function\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Subscriptions on queues\nchannel.basic_consume(\"order_fulfillment\", order_fulfillment, auto_ack=True)\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\ndef close_handler(signal, frame):\n    connection.close()\n\n\n# Run consuming server\ntry:\n    signal.signal(signal.SIGINT, close_handler)\n    channel.start_consuming()\nexcept Exception as e:\n    print(e)\n",
    "execution_count": null,
