--- a/ipynb/Distributed Systems and Errors/4 Pub Sub.ipynb
+++ b/ipynb/Distributed Systems and Errors/4 Pub Sub.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "source": "# Pub/Sub Style",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "b27dbaab4fa140fb946945b79b86bcae",
     "tags": [],
     "is_collapsed": false,
@@ -12,18 +13,19 @@
   },
   {
    "cell_type": "markdown",
-   "source": "*Characteristics:*\n- Collaboration Style: **Commands = Orchestration**\n- System Style: **Reactive**\n- Communication Style: **Synchronous (Blocking)**\n- Flow: **Managed**",
+   "source": "*Characteristics:*\n- Collaboration Style: **Commands = Orchestration**\n- System Style: **Reactive**\n- Communication Style: **Asynchronous**\n- Flow: **Managed**",
    "metadata": {
     "cell_id": "33bd37b9f88b4001a9a38fa73494d626",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 181
+    "deepnote_cell_height": 300
    }
   },
   {
    "cell_type": "markdown",
    "source": "## Process / Scenario",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "8d68d2bdfa9b4f7e85ad86b3007e2a59",
     "tags": [],
     "is_collapsed": false,
@@ -37,7 +39,7 @@
     "cell_id": "42cc775e36364739807bc6ec0d50e51e",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 702.5
+    "deepnote_cell_height": 584.0833129882812
    }
   },
   {
@@ -81,7 +83,7 @@
     "deepnote_cell_type": "input-text"
    },
    "source": "tenant = 'showcase'",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -98,6 +100,7 @@
    "cell_type": "markdown",
    "source": "## Topic Subscription of Microservices",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "be1a5e31bb40437f9ddfc5c16fac22c7",
     "tags": [],
     "is_collapsed": false,
@@ -111,7 +114,7 @@
     "cell_id": "0e33300bebee452bbd78d87318654a15",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 74.80000305175781
+    "deepnote_cell_height": 97.19999694824219
    }
   },
   {
@@ -125,7 +128,7 @@
     "execution_millis": 7902,
     "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 675
+    "deepnote_cell_height": 670
    },
    "source": "import httpimport\n\nwith httpimport.github_repo(\"DigiBP\", \"digibp-camunda-external-python-task\", \"cam\"):\n    import cam\n\n# Initialize worker client\nworker = cam.Client(camunda_eninge_rest)\n\n# Payment microservice callback function\ndef retrievePayment(taskid, response):\n    print(\"Payment Done\")\n    worker.complete(taskid)\n\n\n# Inventory microservice callback function\ndef fetchGoods(taskid, response):\n    print(\"Goods Fetched\")\n    worker.complete(taskid)\n\n\n# Shipment microservice callback function\ndef shipGoods(taskid, response):\n    print(\"Goods Shipped\")\n    worker.complete(taskid)\n\n\n# Subscriptions on topics\nworker.subscribe(\"retrievePayment\", retrievePayment, tenant)\nworker.subscribe(\"fetchGoods\", fetchGoods, tenant)\nworker.subscribe(\"shipGoods\", shipGoods, tenant)\n\n# Run polling server\nworker.polling()\n",
    "execution_count": null,
