--- a/ipynb/Distributed Systems and Errors/5 Error.ipynb
+++ b/ipynb/Distributed Systems and Errors/5 Error.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "source": "# Error Handling",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "88ab08eb930d4bf49ef8528797a77143",
     "tags": [],
     "is_collapsed": false,
@@ -17,7 +18,7 @@
     "cell_id": "5f034ec227ab42599244aedf646ee1c4",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 926.0833129882812
+    "deepnote_cell_height": 733
    }
   },
   {
@@ -33,8 +34,8 @@
     "deepnote_cell_type": "input-text"
    },
    "source": "camunda_eninge_rest = 'https://digibp.herokuapp.com/engine-rest'",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -59,7 +60,7 @@
     "deepnote_cell_type": "input-text"
    },
    "source": "tenant = 'showcase'",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -76,6 +77,7 @@
    "cell_type": "markdown",
    "source": "## Topic Subscription of (sometimes) failing Microservices",
    "metadata": {
+    "formattedRanges": [],
     "cell_id": "aee644c9853346da9828a7cf7a7af3b5",
     "tags": [],
     "is_collapsed": false,
@@ -89,7 +91,7 @@
     "cell_id": "f6b55939357043bdb9ebeaa15394f90e",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 111.19999694824219
+    "deepnote_cell_height": 133.60000610351562
    }
   },
   {
@@ -103,17 +105,17 @@
     "cell_id": "00002-d78e23ff-7eea-4931-86bb-cfc9ee063770",
     "output_cleared": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1565
+    "deepnote_cell_height": 1560
    },
    "source": "import httpimport, random\n\nwith httpimport.github_repo(\"DigiBP\", \"digibp-camunda-external-python-task\", \"cam\"):\n    import cam\n\n# Initialize worker client\nworker = cam.Client(camunda_eninge_rest)\n\n# Payment microservice callback function\ndef retrievePayment(taskid, response):\n    if random.randint(0, 1):\n        print(\"Payment Done\")\n        worker.complete(taskid)\n    else:\n        print(\"PaymentFailed\")\n        worker.error(taskid, \"PaymentFailed\")\n\n\n# Refund payment microservice callback function\ndef refundPayment(taskid, response):\n    print(\"Refund Payment Done\")\n    worker.complete(taskid)\n\n\n# Inventory microservice callback function\ndef fetchGoods(taskid, response):\n    if random.randint(0, 1):\n        print(\"Goods Fetched\")\n        worker.complete(taskid)\n    else:\n        print(\"OutOfStock\")\n        worker.error(taskid, \"OutOfStock\")\n\n\n# Shipment microservice callback function\ndef shipGoods(taskid, response):\n    print(\"Goods Shipped\")\n    worker.complete(taskid)\n\n\n# Subscriptions on topics\nworker.subscribe(\"retrievePayment\", retrievePayment, tenant)\nworker.subscribe(\"refundPayment\", refundPayment, tenant)\nworker.subscribe(\"fetchGoods\", fetchGoods, tenant)\nworker.subscribe(\"shipGoods\", shipGoods, tenant)\n\n# Run polling server\nworker.polling()\n",
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "text": "polling subscription: retrievePayment\npolling subscription: refundPayment\npolling subscription: fetchGoods\npolling subscription: shipGoods\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\n200\n200\npolling subscription: fetchGoods\npolling subscription: shipGoods\npolling subscription: refundPayment\n200\npolling subscription: retrievePayment\n200200\n\n200\npolling subscription: shipGoods\npolling subscription: refundPayment\npolling subscription: fetchGoods\n200\npolling subscription: retrievePayment\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\nPayment Done\n\n204\npolling subscription: retrievePayment\n200\nGoods Fetched\n\n204\npolling subscription: fetchGoods\n200\nGoods Shipped\n\n204\npolling subscription: shipGoods\n200\npolling subscription: refundPayment\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\npolling subscription: fetchGoods\n200\npolling subscription: shipGoods\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\nPayment Done\n\n204\npolling subscription: retrievePayment\n200\nOutOfStock\n\n204\npolling subscription: fetchGoods\n200\nRefund Payment Done\n\n204\npolling subscription: refundPayment\n200\npolling subscription: shipGoods\n200\npolling subscription: retrievePayment\n200\npolling subscription: fetchGoods\n200\npolling subscription: refundPayment\n200\npolling subscription: shipGoods\n200\npolling subscription: retrievePayment\n200\npolling subscription: fetchGoods\n200\npolling subscription: refundPayment\n200\npolling subscription: shipGoods\n200\npolling subscription: retrievePayment\n200\npolling subscription: fetchGoods\n200\npolling subscription: refundPayment\n200\npolling subscription: shipGoods\n200\npolling subscription: retrievePayment\n200\npolling subscription: fetchGoods\n200\npolling subscription: refundPayment\n200\npolling subscription: shipGoods\n",
      "output_type": "stream"
     }
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
