--- a/ipynb/Distributed Systems and Errors/3 Message Tracking.ipynb
+++ b/ipynb/Distributed Systems and Errors/3 Message Tracking.ipynb
@@ -18,7 +18,7 @@
     "cell_id": "5d6e1bfb377f4a03b05b7dba94644967",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 181
+    "deepnote_cell_height": 300
    }
   },
   {
@@ -119,7 +119,8 @@
    "metadata": {
     "cell_id": "a1cdc3e6314a489b999f087b6fc1e45e",
     "tags": [],
-    "deepnote_cell_type": "markdown"
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 94.80000305175781
    }
   },
   {
@@ -133,7 +134,8 @@
     "execution_millis": 265492,
     "is_code_hidden": true,
     "output_cleared": true,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 74.80000305175781
    },
    "source": "if not amqp_url:\n    import os\n    amqp_url = os.environ.get('AMQP_URL')",
    "execution_count": null,
